docs(nnue): close #218 — all acceptance criteria met, gate cleared at 46.7%
Why: #218's own acceptance criteria required an explicit pass/fail record
against the >=40% gate and confirmation Stage 2 is skippable, plus its
architecture-invariants section required no object allocation in the new
vector hot path -- the latter had only been reasoned about informally, never
measured, across PRs 1-3.
What: confirmed every acceptance criterion is satisfied by the existing PR
1-3 work (scalar fallback, bit-identical output at both unit and whole-
search level, 46.7% gate pass, Stage 2 correctly skipped). Measured the
allocation invariant directly: a same-package probe class recorded 0 bytes
allocated across 2,000,000 post-warmup addFeature/subtractFeature call
pairs via ThreadMXBean -- C2's escape analysis eliminates the ShortVector
intermediates, matching JEP 338's documented design.
Out of scope: Stage 2, evaluate() changes, search changes -- none made.
Closes #218 Phase: 15 — NNUE